@@ -1,0 +1,3 @@
+[
+    "test.txt": "plain_text_file"
+]
